estilos generales - primera paleta de muestra

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </button>
                 </div>
             </div>
-            <div class="row genertae">
+            <div class="row generate">
                 <div class="col">
                     <button class="btn btn-generate" id="btn-generate">
               Generar <i class="fas fa-lock"></i>
