Main Events - Botones mas, menos y otros

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             </button>
                 </div>
             </div>
-            <div class="row upper-case">
+            <div class="row upper_case">
                 <div class="col">
-                    <label for="upper-case">Incluir Mayúsculas</label>
+                    <label for="upper_case">Incluir Mayúsculas</label>
                 </div>
                 <div class="col">
-                    <button class="btn" id="upper-case">
+                    <button class="btn" id="upper_case">
               <i class="fas fa-check"></i>
             </button>
                 </div>
