Estandarizacion de nombres-Correc. ortograficos

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="row symbols">
-                <div class="col"><label for="symbols">Incluir Simbolos</label></div>
+                <div class="col"><label for="symbols">Incluir Símbolos</label></div>
                 <div class="col">
                     <button class="btn" id="symbols">
               <i class="fas fa-check"></i>
