--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <form action="" class="app" id="app">
             <div class="row password-length">
                 <div class="col">
-                    <label for="password-length"> Número de Caracteres </label>
+                    <label for="password-length">Largo de contraseña</label>
                 </div>
                 <div class="col btns">
                     <div>
